--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NODE_ENV=development
 CLIENT_URL=http://localhost:3000
 HTTP_HOST=localhost
 HTTP_PORT=15000
-SOCKET_PORT=15000
+WS_PORT=15000
 
 AUTH_SVC_URL=http://localhost:9000/api/v1/auth/internal
 
