--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/websockets": "^10.3.3",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.11.0",
     "@socket.io/redis-adapter": "^8.2.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
@@ -60,7 +61,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.9.1",
+    "prisma": "^5.11.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
