--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ REDIS_URL=redis://localhost:6379
 RABBITMQ_URL=amqp://root:root@localhost:5672
 RABBITMQ_QUEUE=video-manager
 RABBITMQ_USERS_QUEUE=users
+RABBITMQ_LIBRARY_QUEUE=library
+RABBITMQ_COMMUNITY_QUEUE=community
 
 JWT_SECRET=asdh7as0jxm4we0xrm0exmgrt68xom5ext
 JWT_ISSUER=UaTube.VideoManager
