--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ HTTP_HOST=0.0.0.0
 HTTP_PORT=15000
 
 AUTH_SVC_URL=http://localhost:9000/api/v1/auth/internal
+VIDEO_PROCESSOR_SVC_URL=http://localhost:11000/api/v1/processor/internal
+
+VIDEO_PROCESSOR_SERVICE_TOKEN=processor
 
 REDIS_URL=redis://localhost:6379
 
