--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,11 @@ REDIS_URL=redis://localhost:6379
 RABBITMQ_URL=amqp://root:root@localhost:5672
 RABBITMQ_QUEUE=video-manager
 RABBITMQ_USERS_QUEUE=users
+RABBITMQ_SEARCH_QUEUE=search
 RABBITMQ_LIBRARY_QUEUE=library
+RABBITMQ_HISTORY_QUEUE=history
 RABBITMQ_COMMUNITY_QUEUE=community
+RABBITMQ_VIDEO_STORE_QUEUE=video-store
 
 JWT_SECRET=asdh7as0jxm4we0xrm0exmgrt68xom5ext
 JWT_ISSUER=UaTube.VideoManager
