--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.3.3",
-    "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.14.0",
     "@socket.io/redis-adapter": "^8.2.1",
     "amqp-connection-manager": "^4.1.14",
@@ -43,8 +41,7 @@
     "redis": "^4.6.13",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
-    "rxjs": "^7.8.1",
-    "socket.io": "^4.7.4"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
